--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
 		  <%= render 'shared/user_info' %>
 		</seciton>
 		<section>
+		  <%= render 'shared/stats' %>
+		</section>
+		<section>
 		  <%= render 'shared/micropost_form' %>
 		</section>
 	</aside>
